# cpp-losh

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: losh.cpp
src/interface/: losh.hpp
